--- a/index.html
+++ b/index.html
@@ -88,51 +88,49 @@ section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 
 <script>
 const URL_API="https://script.google.com/macros/s/AKfycbyMykNvWZAAjwQPiyQ1vyvYKfPdFiuylhfwSlOmKqALCUFMcPHj9SZQ0IxDcA7Qv85mqQ/exec";
-const CACHE_KEY="monte_prato_cache_v12";
+const CACHE_KEY="monte_prato_cache_v7";
 const CACHE_TIME=3*60*60*1000;
 let cachedData=null,totalObrigatorias=0;
 let precoBase=45.00,totalAdicionais=0,q=1;
 
-// ========== CARREGAMENTO AUTOMÁTICO ==========
-window.addEventListener('DOMContentLoaded',carregarDados);
-async function carregarDados(){
+// ===== PRÉ-CARREGAR =====
+document.addEventListener("DOMContentLoaded",async()=>{
+  const cache=localStorage.getItem(CACHE_KEY);
+  if(cache){
+    const {data,time}=JSON.parse(cache);
+    if(Date.now()-time<CACHE_TIME){cachedData=data;return;}
+  }
   try{
-    const cache=localStorage.getItem(CACHE_KEY);
-    if(cache){
-      const {data,time}=JSON.parse(cache);
-      if(Date.now()-time<CACHE_TIME){cachedData=data;return;}
-    }
     const r=await fetch(`${URL_API}?acao=listarItens`);
     const data=await r.json();
     cachedData=data;
     localStorage.setItem(CACHE_KEY,JSON.stringify({data,time:Date.now()}));
-  }catch(e){console.error("Erro ao carregar itens:",e);}
-}
+  }catch(e){console.error("Erro ao carregar dados",e);}
+});
 
-// ========== REFERÊNCIAS ==========
+// ===== REFERÊNCIAS =====
 const modalBg=document.getElementById('modal-bg');
 const blocos=document.getElementById('blocos');
 const faltamEl=document.getElementById('faltam');
 const btnAdd=document.getElementById('btnAdd');
 const qEl=document.getElementById('quant');
-
-// ========== EVENTOS ==========
 document.getElementById('card-prato').onclick=()=>abrirModal();
 document.getElementById('close').onclick=()=>modalBg.style.display='none';
 modalBg.onclick=e=>{if(e.target===modalBg)modalBg.style.display='none';};
 document.getElementById('mais').onclick=()=>{q++;qEl.textContent=q;atualizarPreco()};
 document.getElementById('menos').onclick=()=>{if(q>1){q--;qEl.textContent=q;atualizarPreco()}};
 
-// ========== ABRIR MODAL ==========
+// ===== ABRIR MODAL =====
 function abrirModal(){
   modalBg.style.display='flex';
   blocos.innerHTML='<p style="text-align:center;color:#888;">Carregando opções...</p>';
-  if(cachedData) montarBlocos(cachedData);
-  else faltamEl.style.display='block';
+  faltamEl.style.display='none';
+  if(!cachedData){blocos.innerHTML='<p style="color:red;text-align:center;">Erro ao carregar dados.</p>';return;}
+  montarBlocos(cachedData);
   atualizarPreco();
 }
 
-// ========== MONTAR SEÇÕES ==========
+// ===== MONTAR BLOCOS =====
 function montarBlocos(data){
   blocos.innerHTML='';
   totalObrigatorias=Object.keys(data.categorias).length;
@@ -140,7 +138,7 @@ function montarBlocos(data){
     const sec=document.createElement('section');
     sec.dataset.ok='0';
     sec.innerHTML=`<h3>${categoria}</h3>
-      <p class="sub">Mínimo: ${info.minimo} - Selecionados: <span id="sel_${i}">0</span> / ${info.maximo}</p>`;
+    <p class="sub">Mínimo: ${info.minimo} - Selecionados: <span id="sel_${i}">0</span> / ${info.maximo}</p>`;
     info.itens.forEach((item,j)=>{
       const id=`${categoria}_${j}`;
       const input=document.createElement('input');
@@ -153,3 +151,45 @@ function montarBlocos(data){
       label.className='option';
       label.appendChild(input);
       label.append(' '+item.nome+(item.adicional>0?` (+R$ ${item.adicional.toFixed(2).replace('.',',')})`:''));
+      sec.appendChild(label);
+    });
+    const lim=document.createElement('div');
+    lim.className='limit-info';
+    lim.textContent=`Limite: ${info.maximo}`;
+    sec.appendChild(lim);
+    blocos.appendChild(sec);
+  });
+  atualizarStatus();
+}
+
+// ===== SELEÇÃO =====
+function gerenciarSelecao(input,sec,info,i){
+  const selecionados=[...sec.querySelectorAll('input:checked')];
+  const qt=selecionados.length;
+  document.getElementById(`sel_${i}`).textContent=qt;
+  if(qt>=info.maximo){
+    sec.querySelectorAll('input:not(:checked)').forEach(el=>el.disabled=true);
+    const prox=sec.nextElementSibling;if(prox)prox.scrollIntoView({behavior:'smooth'});
+  }else sec.querySelectorAll('input').forEach(el=>el.disabled=false);
+  sec.dataset.ok=qt>=info.minimo?'1':'0';
+  atualizarStatus();atualizarPreco();
+}
+
+// ===== PREÇO =====
+function atualizarPreco(){
+  totalAdicionais=[...blocos.querySelectorAll('input:checked')]
+    .reduce((soma,el)=>soma+Number(el.dataset.adicional||0),0);
+  const total=(precoBase+totalAdicionais)*q;
+  btnAdd.textContent=`ADICIONAR AO PEDIDO R$ ${total.toFixed(2).replace('.',',')}`;
+}
+
+// ===== STATUS =====
+function atualizarStatus(){
+  const ok=[...blocos.querySelectorAll('section')].filter(s=>s.dataset.ok==='1').length;
+  const faltam=totalObrigatorias-ok;
+  if(faltam<=0){faltamEl.style.display='none';btnAdd.classList.add('btn-active');btnAdd.disabled=false;}
+  else{faltamEl.textContent=`Ainda faltam ${faltam} seções obrigatórias`;faltamEl.style.display='block';btnAdd.classList.remove('btn-active');btnAdd.disabled=true;}
+}
+</script>
+</body>
+</html>
